# Connectivity-Layer

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  ADMIN_ONLY_USERS_LIST.md  ADMIN_TDD_SUMMARY.md  API_COVERAGE_ANALYSIS.md  CD_SETUP_INSTRUCTIONS.md  CI_CD_SETUP.md  CI_IMPROVEMENTS.md  CI_QUICK_REFERENCE.md  COMMANDS_TO_TRUST.md  DEMO_GUIDE.md  DEMO_QUICK_START.md  Dockerfile  FIX_TABLES_NOW.md  HEALTH_MONITORING_TDD_SUMMARY.md  IOTDB_DOCKER_GITHUB_ACTIONS.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REDIS_REMOVAL_SUMMARY.md  REQUIREMENT_BASED_TESTING.md  SYSTEM_TEST_REPORT.md  TDD_GUIDE.md  TELEMETRY_RETRIEVAL_FIX.md  TELEMETRY_TABLE_SIMPLIFIED.md  TEST_DATABASE_SETUP.md  USER_TDD_SUMMARY.md  add_swagger_docs.py  app.py  coverage.json  demo_complete_workflow.py  demo_workflow.sh  docker-compose.yml  fix_database.sh  init_db.py  init_test_db.py  (+10 more)
docs/: ADMIN_API_CURL_TESTS.md  ADMIN_MONITORING_IMPLEMENTED.md  ADMIN_MONITORING_TODO.md  ADMIN_SYSTEM_MONITORING_REQUIREMENTS.md  ADMIN_USER_DELETION.md  API_DOCUMENTATION.md  API_DOCUMENTATION_SUMMARY.md  API_LIST.md  API_REFERENCE_COMPLETE.md  CHARTS_API_COMPLETE.md  CHART_APIS.md  CLEANUP_SUMMARY.md  DATABASE_SETUP_TROUBLESHOOTING.md  DEVICE_STATUS_SUMMARY.md  FLASK_PROMETHEUS_REQUIREMENTS.md  METRICS_API_USAGE.md  MIGRATION_IOTDB_TO_POSTGRES.md  MISSING_APIS.md  MQTT_ADMIN_ENDPOINTS.md  MQTT_OPTIONAL.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  SWAGGER_QUICK_FIX.md  SWAGGER_UI_GUIDE.md  TDD_DEVICE_STATUS_TRACKING.md  TELEMETRY_GET_APIS.md  USER_DEVICES_API.md  activate_device.py  (+5 more)
(+153 files in other folders)
